[metadata]
name = s3webfront
description-file = README.rst
home-page= https://github.com/benley/s3webfront
author = Benjamin Staffin
author-email = benley@gmail.com
license = Apache License, Version 2.0
classifiers =
    Environment :: Console
    Development Status :: 4 - Beta
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[files]
modules =
  s3webfront

[entry_points]
console_scripts =
  s3webfront = s3webfront:proxy_main

[pbr]
warnerrors = True

[wheel]
universal = 1

[flake8]
show-source = True
exclude = .venv,.tox,dist,doc,build,*.egg,*.egg_info/*
